More adjustments to fix issue of the arrow button wrappers overlapping with the heading.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,34 +1,42 @@
 #app {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background-color: #222222;
-    background: repeating-linear-gradient(45deg, #263413 0%, #263413 10%, #1f290f 0%, #1f290f 50%) 0/15px 15px;
+  background-color: #222222;
+  background: repeating-linear-gradient(
+      45deg,
+      #263413 0%,
+      #263413 10%,
+      #1f290f 0%,
+      #1f290f 50%
+    )
+    0/15px 15px;
 }
 
 #heading-wrapper {
-    height: 9vh;
+  height: 9vh;
 }
 
 #photodisplay-wrapper {
-    height: 85vh;
+  height: 85vh;
+  margin-top: 20px;
 }
 
 #copyright-wrapper {
-    height: 1vh;
+  height: 1vh;
 }
 
 @media (max-width: 600px) {
-    #heading-wrapper {
-        height: 9vh;
-    }
+  #heading-wrapper {
+    height: 9vh;
+  }
 
-    #photodisplay-wrapper {
-        height: 80vh;
-    }
+  #photodisplay-wrapper {
+    height: 80vh;
+  }
 
-    #copyright-wrapper {
-        height: 1vh;
-    }
+  #copyright-wrapper {
+    height: 1vh;
+  }
 }
