--- a/src/css/Copyright.css
+++ b/src/css/Copyright.css
@@ -1,5 +1,4 @@
 #copyright {
-    margin-top: 20px;
-    text-align: center;
-    color: var(--woob-green);
+  text-align: center;
+  color: var(--woob-green);
 }
